rust/drop/fail/vec-push.stderr
error[E0502]: cannot borrow `v1` as mutable because it is also borrowed as immutable
  --> fail/vec-push.rs:18:5
   |
16 |     let e = &v1[0];
   |              -- immutable borrow occurs here
17 |     //let i = v1.iter();
18 |     v1.push(Object { id: 5 });
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ mutable borrow occurs here
...
24 |     println!("{:?}", e);
   |                      - immutable borrow later used here
